--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "infiniquiz-api",
+  "name": "template-api",
   "version": "0.0.1",
-  "description": "InfiniQuiz backend API",
+  "description": "backend API",
+  "author": "Yves Toiser",
+  "license": "GNU GPL",
   "main": "dist/index.js",
   "scripts": {
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix pretty-correct",
@@ -12,16 +14,20 @@
     "pretty-check": "prettier -c src",
     "pretty-correct": "prettier --write src"
   },
-  "author": "Yves Toiser",
-  "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mongodb": "^3.5.7",
+    "mongoose": "^5.9.12"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
+    "@types/mongodb": "^3.5.14",
+    "@types/mongoose": "^5.7.15",
     "@types/node": "^13.13.4",
     "nodemon": "^2.0.3",
     "prettier": "^2.0.5",
